# Cuadernos-tecnicos-FPGAs-libres

./: .gitignore  26-falling-edge.ice  README.md
wiki/CT-senales-visualizacion/Ejemplos/: 2023-03-14-ej15-tx-2-bytes.ice
wiki/CT1-PWM-LED/Portada/: 2019-01-02-cover.odp
wiki/CT18-Unario/: Controlador-00-animacion.xcf
wiki/CT19-Automatas/: Tablero-01-intro.xcf  Tablero-08-ej12-animacion.xcf  Tablero-15-ej13-animacion.xcf  Tablero-19-ej14-animacion.xcf  Tablero-24-ej15-animacion.xcf  Tablero-27-ej16-animacion.xcf
wiki/CT20-Display-1x4/: Disp1x4-v2-02-anim.xcf  Ilusion-04-laser.xcf
wiki/CT20-Matriz-4x4/: Disp1x4-v2-13-sync.xcf  Disp1x4-v2-14-no-sync.xcf  Disp1x4-v2-19-vsync.xcf  Ilusion-05-laser.xcf
wiki/CT21-Matrix-4x4-LEDs/: Intro-04-matriz-4x4-leds-raster.xcf  Matriz-2x2-09-animacion.xcf  Matriz-3x3-06-animacion.xcf
wiki/CT9-Memorias/: .gitignore
wiki/Consola-entrada/: 01-Implementacion-consola-min.ice  02-bloque-consola.ice  03-calculadora-unaria.ice
wiki/Panel-LEDs-RGB-32x32/: test-01.ice  test-02.ice
wiki/Pila/: 01-Pila.ice  02-Pila.ice  03-Pila.ice  04-Pila.ice  05-Pila.ice  06-Pila.ice  07-Pila.ice  08-Pila.ice  09-HWForth-led-port.ice  10-HWForth-input-button.ice  11-HWForth-Bus9-input-button.ice  12-HWForth-Bus14-input-button.ice
wiki/Serial-flash-mem/: .gitignore
wiki/ZX-Spectrum/src-cpc/tapes/playtzx-0.12b/: .#audio.c.1.1  .#audio.c.1.3  .cvsignore  .gitignore  AUTHORS  History  Makefile.am  Makefile.in  README  aclocal.m4  au-file.h  audio.c  audio.h  configure  configure.in  machines.h  mkinstalldirs  playtzx.c  playtzx.spec  playtzx.txt
(+1298 files in other folders)
